external-crates/move/crates/move-package-alt/tests/data/invalid_environment1/Move@parsed.snap
---
source: crates/move-package-alt/tests/test_runner.rs
---
error: TOML parse error at line 8, column 11
  |
8 | mainnet = true
  |           ^^^^
invalid type: boolean `true`, expected a string
